# stellar-dapp

./: .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
contracts/campaign/: Cargo.toml
contracts/campaign/src/: events.rs  interop.rs  lib.rs  test.rs
contracts/factory/: Cargo.toml
contracts/factory/src/: interop.rs  lib.rs  test.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: lib.rs
contracts/treasury/: Cargo.toml
contracts/treasury/src/: lib.rs  test.rs
frontend/: .env.production  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/campaign/[id]/: page.tsx
frontend/src/app/create/: page.tsx
frontend/src/components/: activity-feed.tsx  campaign-card.tsx  connect-button.tsx  donate-dialog.tsx  navbar.tsx  progress-bar.tsx  status-badge.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  textarea.tsx  toast.tsx  toaster.tsx
frontend/src/hooks/: use-campaigns.ts  use-toast.ts
frontend/src/lib/: config.ts  contracts.ts  events.ts  utils.ts  validation.ts  wallet.ts
frontend/src/providers/: app-providers.tsx  wallet-provider.tsx
frontend/src/types/: index.ts
scripts/: build.sh  deploy.sh  seed.sh
