[workspace]
resolver = "2"
members = [
    "contracts/shared",
    "contracts/treasury",
    "contracts/campaign",
    "contracts/factory",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["StellarFund Contributors"]
repository = "https://github.com/your-org/stellarfund"

[workspace.dependencies]
soroban-sdk = "=26.1.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
