[package]
name = "stellarfund-factory"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellarfund-shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellarfund-treasury = { path = "../treasury" }
stellarfund-campaign = { path = "../campaign" }
